[gd_scene load_steps=16 format=3 uid="uid://cswj58kvqiwq3"]

[ext_resource type="Script" path="res://scripts/mainmenu.gd" id="1_1td2b"]
[ext_resource type="FontData" uid="uid://ce22ik7p6prcc" path="res://assets/thirdparty/IBM-Plex-Sans/IBMPlexSans-SemiBold.otf" id="2_bqkws"]
[ext_resource type="FontData" uid="uid://cgt7wmigp80fu" path="res://assets/thirdparty/Trispace-RC1/Trispace-Regular.otf" id="2_li80h"]
[ext_resource type="Script" path="res://scenes/menucover.gd" id="2_rw1vb"]
[ext_resource type="FontData" uid="uid://blx50dfqtv47d" path="res://assets/thirdparty/IBM-Plex-Sans/IBMPlexSans-Regular.otf" id="3_vlerf"]
[ext_resource type="FontData" uid="uid://coej4qrm7yxmn" path="res://assets/thirdparty/IBM-Plex-Sans/IBMPlexSans-Italic.otf" id="4_4aard"]
[ext_resource type="PackedScene" uid="uid://q7cu7i1lhnsk" path="res://scenes/settings_menu.tscn" id="6_02lp3"]

[sub_resource type="Font" id="Font_nugkk"]
data/0 = ExtResource("2_bqkws")

[sub_resource type="Font" id="Font_5xylb"]
data/0 = ExtResource("2_li80h")

[sub_resource type="Font" id="Font_iab85"]
data/0 = ExtResource("4_4aard")

[sub_resource type="Font" id="Font_3fryb"]
data/0 = ExtResource("2_bqkws")

[sub_resource type="Font" id="Font_isj4x"]
data/0 = ExtResource("3_vlerf")

[sub_resource type="Font" id="Font_8wdfq"]
data/0 = ExtResource("3_vlerf")

[sub_resource type="Font" id="Font_qgpux"]
data/0 = ExtResource("3_vlerf")

[sub_resource type="Theme" id="Theme_sprmj"]
default_base_scale = 2.0
default_font = SubResource("Font_qgpux")
default_font_size = 50

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1td2b")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="Cover" type="Sprite2D" parent="CenterContainer"]
script = ExtResource("2_rw1vb")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0.627451)
metadata/_edit_layout_mode = 1

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -592.0
offset_top = -280.5
offset_right = 592.0
offset_bottom = 280.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Title" type="Label" parent="HBoxContainer"]
offset_right = 1184.0
offset_bottom = 211.0
theme_override_fonts/font = SubResource("Font_nugkk")
theme_override_font_sizes/font_size = 160
text = "Lilt"
horizontal_alignment = 1

[node name="Version" type="Label" parent="HBoxContainer"]
offset_top = 215.0
offset_right = 1184.0
offset_bottom = 270.0
theme_override_fonts/font = SubResource("Font_5xylb")
theme_override_font_sizes/font_size = 45
text = "2022.712.0"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
offset_top = 274.0
offset_right = 1184.0
offset_bottom = 474.0

[node name="Description" type="Label" parent="HBoxContainer"]
offset_top = 478.0
offset_right = 1184.0
offset_bottom = 685.0
theme_override_fonts/font = SubResource("Font_iab85")
theme_override_font_sizes/font_size = 50
text = "A proof-of-concept mobile rhythm game 
based on EVAST9919’s “Swing” game mode
for osu!lazer."
horizontal_alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
offset_top = 689.0
offset_right = 1184.0
offset_bottom = 889.0

[node name="LoadButton" type="Button" parent="HBoxContainer"]
offset_top = 893.0
offset_right = 1184.0
offset_bottom = 980.0
theme_override_fonts/font = SubResource("Font_3fryb")
theme_override_font_sizes/font_size = 60
text = "Load Score via Data Pack (.pck)"
flat = true

[node name="SettingsButton" type="Button" parent="HBoxContainer"]
offset_top = 984.0
offset_right = 1184.0
offset_bottom = 1071.0
theme_override_fonts/font = SubResource("Font_isj4x")
theme_override_font_sizes/font_size = 60
text = "Open Settings"
flat = true

[node name="QuitButton" type="Button" parent="HBoxContainer"]
offset_top = 1075.0
offset_right = 1184.0
offset_bottom = 1162.0
theme_override_fonts/font = SubResource("Font_8wdfq")
theme_override_font_sizes/font_size = 60
text = "Quit Game"
flat = true

[node name="SettingsMenu" parent="." instance=ExtResource("6_02lp3")]
visible = false

[node name="FileDialog" type="FileDialog" parent="."]
disable_3d = true
msaa = 1
screen_space_aa = 1
title = "Open a File"
position = Vector2i(180, 320)
size = Vector2i(1080, 1920)
mode = 2
always_on_top = true
popup_window = true
theme = SubResource("Theme_sprmj")
file_mode = 0
access = 2

[connection signal="pressed" from="HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
